<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TÍTULO -->
        <EditText
            android:id="@+id/etTitle"
            android:inputType="textCapSentences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/task_title"
            android:padding="12dp"
            android:background="@android:drawable/edit_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- DESCRIPCIÓN -->
        <EditText
            android:id="@+id/etDescription"
            android:inputType="textMultiLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/description"
            android:padding="12dp"
            android:background="@android:drawable/edit_text"
            android:gravity="top"
            android:minLines="3"
            app:layout_constraintTop_toBottomOf="@id/etTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" />

        <!-- CREATED AT -->
        <EditText
            android:id="@+id/etCreatedAt"
            android:inputType="textNoSuggestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/created_at"
            android:padding="12dp"
            android:background="@android:drawable/edit_text"
            app:layout_constraintTop_toBottomOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" />

        <!-- BOTÓN GUARDAR -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:padding="12dp"
            android:backgroundTint="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@id/etCreatedAt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
